--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 <!-- <img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> -->
 <p style="text-align: justify;">
-    The spy got trickier! Now, the secret message might start later in the string. Extend your function to accept a <code>start</code> parameter with default value <code>0</code>.
+    The spy got trickier! Now, the secret message might start later in the string. Extend your function to accept the third parameter <code>start</code> with default value <code>0</code>.
 </p>
 
 <!-- <p style="text-align: center;">
