--- a/info/task_description.html
+++ b/info/task_description.html
@@ -4,6 +4,10 @@
     The spy got trickier! Now, the secret message might start later in the string. Extend your function to accept the third parameter <code>start</code> with default value <code>0</code>.
 </p>
 
+<p style="text-align: justify;">
+    Take into consideration that you script should be able to solve the previous mission in the series as well.
+</p>
+
 <!-- <p style="text-align: center;">
     <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 83px"/>
 </p> -->
